# ProgAILab14

./: .dockerignore  .gitattributes  .gitignore  Makefile  PROMPT_LOG.md  README.md  docker-compose.yml
analyzer/: Dockerfile  requirements.txt
analyzer/aqanalyzer/: __init__.py  batch.py  config.py  flight_client.py  stream.py  validation.py  viz.py  viz_static.py
analyzer/scripts/: analyze_batch.py  consume_stream.py  pull_flight.py
collector/: Dockerfile  go.mod  go.sum  main.go
collector/cmd/gensample/: main.go
collector/internal/arrowutil/: arrowutil.go
collector/internal/config/: config.go
collector/internal/coord/: coord.go  etcd.go
collector/internal/metrics/: metrics.go
collector/internal/model/: measurement.go
collector/internal/sink/: flight.go  kafka.go  parquet.go  parquet_test.go  sink.go
collector/internal/source/: openaq.go  source.go  synthetic.go
collector/internal/validate/: validate.go  validate_cgo.go  validate_stub.go
collector_py/: requirements.txt
collector_py/aqcollector_py/: __init__.py  collector.py
collector_py/scripts/: benchmark.py  run.py
dashboard/: Dockerfile  app.py  requirements.txt
docs/: REPORT.md  architecture.md  benchmark.md
k8s/: 10-etcd.yaml  20-kafka.yaml  30-collector.yaml  40-collector-hpa.yaml  50-analyzer-dashboard.yaml
validator/: Cargo.toml
validator/core/: Cargo.toml
validator/core/src/: lib.rs
validator/ffi/: Cargo.toml
validator/ffi/include/: aq_validator.h
validator/ffi/src/: lib.rs
validator/py/: Cargo.toml  pyproject.toml
validator/py/src/: lib.rs
(+2 files in other folders)
