[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "aq-validator"
version = "0.1.0"
description = "Rust air-quality validator exposed to Python via PyO3"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Rust"]

[tool.maturin]
# Build the cdylib in this crate; module name is `aq_validator` (see lib.rs).
manifest-path = "Cargo.toml"
